# MPI-CPP-Wrapper

./: CMakeLists.txt  LICENSE  README.md
include/: LocalProcess.h  MPIEnvironment.h  Operations.h  Process.h  RemoteProcess.h  array.h  mpi_types.h
src/: MPIEnvironment.cpp  Process.cpp
test/: CMakeLists.txt  testMPIWrapper.cpp  testScatter.cpp
